Added more aesthetic and design features